src/Client/PainKiller.DockubeClient/Manifests/KubernetesDashboard/kubernetes-dashboard-values.yaml
fullnameOverride: dashboard

protocolHttp: false

extraArgs:
  - --enable-skip-login
  - --enable-insecure-login

metricsScraper:
  enabled: true

ingress:
  enabled: true
  className: nginx
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  hosts:
    - dashboard.$$DOMAIN_NAME$$
  paths:
    - /
  tls:
    - hosts:
        - dashboard.$$DOMAIN_NAME$$
      secretName: dashboard-tls
  targetService:
    name: kubernetes-dashboard-kong-proxy
    port: 443

---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-proxy-lb
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.157
  ports:
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
